force-app/main/default/objects/Freee_Sync_Log__c/Freee_Sync_Log__c.object-meta.xml
<CustomObject>
    <label>Free連携ログ</label>
    <nameField>
        <displayFormat>LOG-{0000000000}</displayFormat>
        <label>Free連携ログ名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>