force-app/main/default/objects/Freee_Sync_Log__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>請求</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Freee同期ログ</relationshipLabel>
    <relationshipName>FreeeSyncLogs</relationshipName>
    <type>Lookup</type>
</CustomField>