force-app/main/default/objects/Freee_Sync_Log__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <label>ステータスコード</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>