force-app/main/default/objects/Freee_Sync_Log__c/fields/Target_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Id__c</fullName>
    <label>対象レコードID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>